# pidgy

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  .travis.yml  2019-03-08-pandas-requests-cache-backend.ipynb  2020-03-11-.ipynb  LICENSE  MANIFEST.in  README.md  README.rst  _config.yml  _toc.yml  conf.py  confblog.py  conftest.py  contents.md  data.sqlite  default.nix  dodo.py  environment.yml  index.html  index.ipynb  index.md.ipynb  index.rst  mkdocs.yml  noxfile.py  objects.inv  pidgin.ipynb  pidgin.py  postBuild  pyproject.toml  readme.ipynb  readme.md  readme.md.ipynb  readme_pidgin.md.ipynb  requirements-test.txt  requirements.txt  (+10 more)
.binder/: postBuild
.github/workflows/: docs.yml  publish.yml  pythonpackage.yml  test.yml
_templates/: lite-demo.html  sbt-sidebar-nav.html
basics/: index.html
branch/feb-demo/: 404.html  index.html  sitemap.xml
branch/test-workflow/: 404.html  sitemap.xml
docs/: Including code in documents.ipynb  Including code in documents.md.ipynb  __init__.py  __main__.py  __style__.ipynb  appendix.md.ipynb  basics.ipynb  best-practices.ipynb  best-practices.md  computational-literacy.md  conf.py  config.yml  discussion.md.ipynb  environment.yml  figures.md.ipynb  format_test_suite.py  formatted_tests.md  hooks.py  index.ipynb  index.md  index.rst  inline statements.ipynb  intro.md  intro.md.ipynb  lightning.md.ipynb  magics.ipynb  mkdocs.ipynb  modes.md.ipynb  paper.ipynb  paper.md.ipynb  pidgy.md.ipynb  pidgy_examples.md.ipynb  postBuild  reactivity.ipynb  readme.md  readme.md.ipynb  requirements-rtd.txt  requirements.txt  rules.ipynb  syntax.ipynb  (+11 more)
docs/demos/: 2023-02-28-community-demo.ipynb
docs/examples/: fastapi_application.md  working-within-dataframes.md.ipynb
docs/flavors/: emoji.md.ipynb  index.md.ipynb  lisp.md.ipynb  magic.ipynb  markdown.md.ipynb  templating.md.ipynb  testing.md.ipynb
docs/formats/: markdown.md  notebooks.md.ipynb
docs/paper/: __init__.py  index.ipynb  index.md  intro.md  readme.md
lite/: jupyter-lite.json  jupyter_lite_config.json  overrides.json  requirements.txt
lite/jupyterlite-pidgy/: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  LICENSE  MANIFEST.in  README.md  package.json  setup.cfg  setup.py  tsconfig.json  webpack.config.js
lite/jupyterlite-pidgy/py_src/jupyterlite_pidgy/: _version.py
lite/jupyterlite-pidgy/src/: declarations.d.ts  index.ts  kernel.ts  plugin.ts  tokens.ts  worker.ts
magics/: index.html
pidgin/: Untitled.ipynb  Untitled2.md.ipynb  __init__.ipynb  __init__.py  __main__.py  app.ipynb  appendix.md.ipynb  cli.md.ipynb  config.ipynb  config.py  conventions.ipynb  conversion.md.ipynb  disp.ipynb  display.ipynb  doctesting.ipynb  environment.ipynb  exports.md.ipynb  expressions.ipynb  extension.md.ipynb  extensions.ipynb  flexlist.ipynb  formatter.ipynb  html_to_vdom.ipynb  implementation.md.ipynb  imports.ipynb  inspector.ipynb  install_kernel.ipynb  ipython_extension.ipynb  kernel.ipynb  kernel.json  kernel.py  loader.ipynb  magics.ipynb  markdown.ipynb  mode.ipynb  phrases.ipynb  post_run_cell.ipynb  pytest_plugin.ipynb  pytest_plugin.py  readme.ipynb  (+13 more)
pidgin/kernel/: __main__.py  shell.md.ipynb
pidgin/macros/: __init__.py  _doctest.ipynb  _graphviz.ipynb  _pidgin.ipynb  base.ipynb  embed.ipynb  utils.ipynb
pidgin/strings/: __init__.py  _graphviz.ipynb  _matplotlib.ipynb  _pidgin.ipynb  base.ipynb  embed.ipynb  environment.ipynb  flexlist.ipynb  markdown.ipynb  phrases.ipynb  readme.md.ipynb  utils.ipynb
pidgin/tests/: discovery.md.ipynb  interactive.md.ipynb  plugin.py  readme.md.ipynb
pidgin_contrib/: code_formatting.ipynb
pidgy/: __init__.py  __main__.py  __style__.ipynb  ast.py  autocli.md  autocli.py  base.py  cli.md.ipynb  conversion.md.ipynb  debugging.md.ipynb  emoji.py  events.md  export.md  extension.md  extension.md.ipynb  extras.ipynb  extras.md  kernel.md  kernel.py  lisp.py  loader.ipynb  loader.py  magic.md  magic.py  measure.md  metadata.md  ns.py  outputs.md  outputs.md.ipynb  parser.py  readme.md  reuse.ipynb  runpidgy.md  shell.md  shell.py  tangle.ipynb  tangle.py  test.md  test_weave.ipynb  testing.md  (+5 more)
pidgy/app/: __main__.py  cli.md.ipynb  conversion.md.ipynb
pidgy/apps/: cli.md.ipynb
pidgy/compat/: __init__.py  autoclick.py  display.ipynb  markdown.ipynb  readme.md  templating.md.ipynb  typin.md.ipynb  unittesting.md.ipynb
pidgy/kernel/: __main__.py  shell.md.ipynb
pidgy/kernelspec/: kernel.json
pidgy/pytest_config/: __init__.py  readme.md
pidgy/tests/: __init__.py  interactive.md.ipynb  parameterized_notebook.md.ipynb  plugin.py  readme.md.ipynb  templated_document.md  templating_document.md  test_3rd_party.ipynb  test_3rd_party.md.ipynb  test_basic.md.ipynb  test_cli.ipynb  test_extension.ipynb  test_lists.md.ipynb  test_loader.ipynb  test_magic.ipynb  test_manager.ipynb  test_pidgin_syntax.md.ipynb  test_repl.md  test_run_cell.ipynb  test_run_cell.md.ipynb  test_runpidgy.md.ipynb  test_tangle.ipynb  test_tangle.md.ipynb  test_testing.ipynb  test_testing.md.ipynb  test_weave.ipynb  test_weave.md.ipynb  test_widget_interactivity.md.ipynb
pidgy_examples.md/: index.html
reactivity/: index.html
rites/: __init__.ipynb  __init__.py  all.py  compiler.ipynb  compiler.py  config.ipynb  conventions.ipynb  hypothesis.ipynb  loader.ipynb  loader.py  markdown.ipynb  param.ipynb  recall.ipynb  relative.ipynb  relative.py  rites.ipynb  rites.py  sugar.ipynb  template.ipynb  test.ipynb  testing.ipynb  widgets.ipynb
run/: SHA256SUMS  jupyter-lite.json
run/files/: basics.ipynb  tangle_examples.ipynb
run/pypi/: all.json  comm-0.1.2-py3-none-any.whl  jupyter_core-5.2.0-py3-none-any.whl  jupyterlab_widgets-3.0.5-py3-none-any.whl  pidgy-2023.2.14.dev7+g61d36a8-py3-none-any.whl  widgetsnbextension-4.0.5-py3-none-any.whl
search/: search_index.json
src/: jason.ipynb  jason.py
src/midgy/: __init__.py  __main__.py  readme.md  tangle.py  weave.py
src/pidgin/: __init__.py  (+26 more)
tangle_examples/: index.html
tests/: conftest.py  essay.md.ipynb  test_pidgin.ipynb
(+308 files in other folders)
