[metadata]
name = pidgy
author="deathbeds"
author_email="tony.fast@gmail.com"
url="https://github.com/deathbeds/pidgy"
description = literate programming in ipython
long_description = file: readme.md
keywords = markdown, jupyter
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    
[options]
zip_safe = False
include_package_data = True
install_requires =
    markdown-it-py
tests_require = 
    pytest
package_dir=
    =src
packages=find:

[options.extras_require]
test = pytest

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    midgy = midgy.__main__:main