[metadata]
name = pidgy
author = "deathbeds"
author_email = tony.fast@gmail.com
url = https://github.com/deathbeds/pidgy
description = literate programming in ipython
long_description = file: readme.md
long_description_type = text/markdown
keywords = markdown, jupyter
license = BSD 3-Clause License
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Topic :: Text Processing :: Markup :: HTML

[options]
zip_safe = False
include_package_data = True
install_requires =
    htmlmin
    jinja2
    linkify-it-py
    markdown-it-py
    mdit-py-plugins
    ipywidgets
package_dir=
    =src
packages=find:

[options.extras_require]
test =
    pytest
    nbval
    pandas
    matplotlib
    rich
kernel =
    jupyter-client
    ipykernel

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pidgy = pidgy.__main__:main

[tool:pytest]
norecursedirs = _build .nox .ipynb_checkpoints lite
addopts = --nbval --sanitize-with sanitize.cfg
